# loom

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml  test_edge_condition.yaml  test_edge_error.yaml  test_edge_maxvisits.yaml  test_edge_parallel_fail.yaml  test_edge_resume.yaml  test_full_pipeline.yaml  test_output_pipeline.yaml  test_pipeline.yaml
.claude/: settings.json
.claude/commands/: run-pipeline.md
.claude/hooks/: check_pipeline.js  check_pipeline.py  logger.js  start_pipeline.js  start_pipeline.py
docs/guide/: 00-prerequisites.md  01-python-crash-course.md  02-project-overview.md  03-running-tests.md  04-tutorial-log-node.md  05-reference.md  06-troubleshooting.md  07-appendix.md  README.md
docs/plans/: 2026-06-12-loom-v1.md
docs/specs/: 2026-06-12-loom-design.md
examples/: agents.yaml  pipeline.yaml
loom/: agents.py  cli.py  config.py  executor.py  graph.py  jinja_env.py  parallel.py  registry.py  state.py  tui.py
loom/nodes/: __init__.py  agent.py  base.py  condition.py  human.py  log.py  parallel.py  shell.py  subflow.py
tests/: test_agents.py  test_cli.py  test_config.py  test_executor.py  test_graph.py  test_human_iot.py  test_log_node.py  test_nodes.py  test_output.py  test_parallel.py  test_parallel_node.py  test_refactor.py  test_state.py  test_tui.py  test_validate.py
